Add razor component

--- a/BlazorServerCRUD/Pages/People.razor
+++ b/BlazorServerCRUD/Pages/People.razor
@@ -1,15 +1,34 @@
 ﻿@page "/people"
 
 @using DataLibrary
+@using BlazorServerCRUD.Models
+@using Microsoft.Extensions.Configuration
 @inject IDataAccess _data
-
+@inject IConfiguration _config
 
 <h3>People</h3>
+@if (people == null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+    @foreach(var p in people)
+    {
+        <p>
+            @p.FirstName @p.LastName
+        </p>
+    }
+}
 
-@code {     
+
+@code {
+    List<PersonModel> people;
 
     protected override async Task OnInitializedAsync()
     {
-        //await _data.LoadData
+        string sql = "select * from people";
+
+        people = await _data.LoadData<PersonModel, dynamic>(sql, new { }, _config.GetConnectionString("default"));
     }
 }
